AC_INIT([el-ml-file], [0.1], [hidekuno@gmail.com])

# Check for Emacs
AC_PATH_PROG([EMACS], [emacs])
AC_PATH_PROG([ELC], [emacsclient])

# Checks for programs.
AC_CHECK_PROGS([MAKE], [make gmake])

# Checks for libraries.
# Example: AC_CHECK_LIB([m], [cos], [LIBS="-lm $LIBS"], [AC_MSG_ERROR([cos not found.])])

# Checks for header files.
# Example: AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.
# Example: AC_TYPE_SIZE_T

# Checks for library functions.
# Example: AC_CHECK_FUNCS([cos])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
